mobile overflow-x fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -173,7 +173,7 @@ input {
   position: absolute;
   display: flex;
   flex-direction: column;
-  right: 6%;
+  right: -5%;
   top: -10%;
 }
 
